# irisnotes

./: .biomeignore  .dockerignore  .gitignore  .prettierignore  .prettierrc  ANTIPATTERN_FIXES_PLAN.md  CLAUDE.md  CLOUD_SYNC_ROADMAP.txt  ICONS_smartsystems.md  OPEN_PROPS_REMOVAL_PLAN.md  OPTIMIZATION_INSTRUCTIONS.md  OPTIMIZATION_SUMMARY.md  PHASE_3_CLEANUP_COMPLETE.md  PKGBUILD  PRETTIER_SETUP.md  PROP_DRILLING_ELIMINATION.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  REFACTORING_PLAN.md  TAILWIND_SETUP.md  TESTING_IMPLEMENTATION_PLAN.md  TOOLBAR_IMPLEMENTATION.md  biome.json  biome120.json  biome80.json  check.sh  eslint.config.js  example-default-note.txt  index.html  install-local.sh  package.json  playwright.config.ts  pnpm-lock.yaml  task.md  test-formatting.txt  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cursor/rules/: task-list.mdc
.github/: copilot-instructions.md
.github/workflows/: release.yml
.storybook/: main.ts  preview.ts
_TASKS/: ANTIPATTERN_FIXES_PLAN.md  JOTAI_MIGRATION_SUMMARY.md  OPEN_PROPS_REMOVAL_PLAN.md  PHASE_3_CLEANUP_COMPLETE.md  PROJECT_OVERVIEW.md  PROP_DRILLING_ELIMINATION.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  REFACTORING_PLAN.md  TAILWIND_SETUP.md  TESTING_IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md
apps/cli/: iris  package.json
apps/main/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/main/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/main/src-tauri/capabilities/: default.json
apps/main/src-tauri/icons/: icon.icns
apps/main/src-tauri/src/: cli.rs  lib.rs  main.rs
apps/quick/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/quick/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/quick/src-tauri/capabilities/: default.json
apps/quick/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.yml
apps/server/src/: db.rs  main.rs  sync.rs
assets/: logo.xcf
coverage/: coverage-final.json  index.html
coverage/src/: app.tsx.html  index.html  main.tsx.html
dev/: .gitignore  README.md  ascii-art.toml  autocorrect.toml  config.json  config.toml  hotkeys-template.json  hotkeys-template.toml  hotkeys.json  hotkeys.toml  logo-colors.css  notes.db  quick-tray-icon.xcf  schema.sql  setup-dev-db.sh  storage.json
dev/config/: README.md  (+3 more)
docs/: BIOME_FORMATTING.md  BUILDING.md  CLI_TOOL.md  CONFIGURATION.md  CURSOR_CUSTOMIZATION.md  DATABASE_DESIGN.md  DISTRIBUTION.md  EDITOR_FEATURES.md  EDITOR_SETTINGS.md  FRACTIONAL_INDEXING.md  HOTKEYS.md  HOTKEYS_ARCHITECTURE.md  ICONS.md  ICON_PATHS.md  MATH_RENDERING.md  MONOREPO_STRUCTURE.md  NOTE_TYPES.md  PROSEMIRROR_CONFIGURATION.md  PROSEMIRROR_FORMATTING.md  PROSEMIRROR_ONENOTE_SPEC.md  QUICK_SEARCH.md  README.md  SETTINGS_ARCHITECTURE.md  SETTINGS_PORTABILITY.md  SYNC_DESIGN.md  THEMING.md  WORKSPACE_STRUCTURE.md  configuration.md  custom-format-syntax.md  file-storage-system.md  hotkey-sequences.md  testing-guidelines.md  tree-schema-migration.md  tree-schema-transformation-complete.md  unified-hotkey-system.md
public/: default-note.txt
schema/: base.sql  seed-dev.sql
scripts/: generate-icons.sh  generate-nerd-icons.mjs  generate-release-notes.mjs  install-dev-desktop.sh  setup-dev-config.sh  smart-biome-toggle.sh  toggle-biome-config.sh  toggle-format.sh  toggle-linewidth.sh
src/: App.css  App.tsx  app.tsx  content.tsx  layout.tsx  main.tsx  router.tsx  view-renderer.tsx  view.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
tests/: example.spec.ts
(+728 files in other folders)
