[package]
name = "iris-server"
version = "0.1.0"
edition = "2021"
description = "Sync hub server for IrisNotes (local-first multi-device sync)"
authors = ["you"]

[[bin]]
name = "iris-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Match the Tauri app's rusqlite so the embedded SQLite behaves identically.
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
