[package]
name = "irisnotes"
version = "1.0.0"
description = "A modern note-taking application inspired by Trilium Notes"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "irisnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
notify = "6.1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-window-state = "2.4"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-single-instance = "2"
toml = "0.8"
# CLI dependencies
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
colored = "2"

