[package]
name = "irisnotes-quick"
version = "1.0.7"
description = "Quick Search overlay for IrisNotes"
authors = ["Niklas"]
edition = "2021"

[lib]
name = "irisnotes_quick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
